# MoneyPrinterTurbo

./: .gitignore  CLAUDE.md  build_portable.ps1  build_pyinstaller.ps1  config.example.toml  knowledgecard.spec  pyi_app.py  pyproject.toml  regen_poster.py  regen_scenes.py  webui.bat
.cursor/rules/: project-rules.mdc
.rules/: 00-collaboration.md  00-constitution-index.md  README.md
app/config/: __init__.py  config.py
app/models/: schema.py
app/services/: card_video.py  html_render.py  image_gen.py  image_studio.py  llm.py  vision.py
app/utils/: utils.py
webui/: Main.py
webui/i18n/: en.json  zh.json
webui/pages/: 1_🎨_知识卡片.py
